# whatsapp-ai-agent

./: .env.example  .gitignore  AGENTS.md  AGENT_PROTOCOL.md  AUTONOMY.md  Dockerfile  GITHUB_DEPLOY.md  HEARTBEAT.md  IDENTITY.md  INFRASTRUCTURE.md  LICENSE  MEMORY.md  README.md  SOUL.md  TOOLS.md  USER.md  docker-compose.yml  feed.md  on_page_optimization.txt  package-lock.json  package.json  pyproject.toml  requirements.txt  seo_analysis_results.txt  seo_reports.txt  visual_assets.md
.learnings/: ERRORS.md  FEATURE_REQUESTS.md  LEARNINGS.md
.openclaw/: workspace-state.json
.venv-video/: pyvenv.cfg
agent_worklog/: analyst.md  designer.md  designer_log.md  escrivao.md  estaleiro.md  growth.md  growth_update.md  inspetor.md  jarvis.md  leads_metrics.csv  researcher.md  seo.md  social.md  templates_proposta_comercial.txt
backups/: notion_crm_pre_cleanup_20260218_235142.json  notion_crm_views_stage_20260219_000524.json  notion_pipeline_backup_20260218_233925.json
clients/: 103757920616701_at_lid.md  105579020312825_at_lid.md  109384243896560_at_lid.md  110681357586588_at_lid.md  113550546714718_at_lid.md  114981190238437_at_lid.md  120363042363583079_at_g.us.md  120363272900467601_at_g.us.md  120363426324005443_at_g.us.md  130193880576023_at_lid.md  130417218814083_at_lid.md  132178138628251_at_lid.md  139320266596456_at_lid.md  145191419785397_at_lid.md  1486192926912_at_lid.md  151707539513483_at_lid.md  153128804605998_at_lid.md  157591158161553_at_lid.md  158119808208983_at_lid.md  160533059788999_at_lid.md  167027117416693_at_lid.md  170759712407778_at_lid.md  (+118 more)
(+177 files in other folders)
